# data_science

./: .gitignore  package.json  pyproject.toml  readme.md  requirements.txt
CostSheet/: ascension_cost_sheet.py  readme.md
Functional Imaging Lab/: hw1.py  hw1v3.py  hw1v4.py  testing.py
Functional_Imaging_Lab/: test.csv  testing.py
Functional_Imaging_Lab/hw1/: hw1.py
Functional_Imaging_Lab/hw2/: AcradineOrangeExt.txt  hw2.py  transmission_ao.txt
Functional_Imaging_Lab/hw3/: hw3.py  test.py  untitled.m
Functional_Imaging_Lab/hw4/: hw4.py  temp.tiff  test.py
Functional_Imaging_Lab/hw5/: Laser Speckle Contrast Imaging.m  hw5.py  laser_speckle_contrast_imaging.py
PDF/: split.ipynb  split.py
citationManager/: CID Fall Semester Final Report.docx  citations.txt  input.txt  main.py  output.txt  test.py
medicalschool/match data/aamc/: 2021_FACTS_Table_A-1.xlsx  README.md  aamc.ipynb
ollama/: test.py
python-email-sender/: config.py  email.py  readme.md
sentdex/#2/: practice.ipynb
svelte/01.hello_counter/.svelte-kit/: ambient.d.ts
svelte/01.hello_counter/.svelte-kit/types/: route_meta_data.json
svelte/01.hello_counter/.svelte-kit/types/src/routes/: $types.d.ts
svelte/01.hello_counter/.svelte-kit/types/src/routes/counter/: $types.d.ts
svelte/01.hello_counter/src/routes/: +page.svelte
svelte/01.hello_counter/src/routes/farenheight2celcius/: +page.svelte
svelte/01.hello_counter/src/routes/flight-booker/: +page.svelte
svelte/01.hello_counter/src/routes/projects/: +page.svelte
svelte/01.hello_counter/src/routes/timer/: +page.svelte
(+3 files in other folders)
