[project]
name = "data-science"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "appnope>=0.1.4",
    "asttokens>=2.4.1",
    "comm>=0.2.2",
    "debugpy>=1.8.7",
    "decorator>=5.1.1",
    "executing>=2.1.0",
    "ipykernel>=6.29.5",
    "ipython>=8.28.0",
    "jedi>=0.19.1",
    "jupyter-client>=8.6.3",
    "jupyter-core>=5.7.2",
    "matplotlib>=3.9.2",
    "matplotlib-inline>=0.1.7",
    "nest-asyncio>=1.6.0",
    "packaging>=24.1",
    "parso>=0.8.4",
    "pexpect>=4.9.0",
    "platformdirs>=4.3.6",
    "prompt-toolkit>=3.0.48",
    "psutil>=6.1.0",
    "ptyprocess>=0.7.0",
    "pure-eval>=0.2.3",
    "pygments>=2.18.0",
    "pymupdf>=1.24.12",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.2",
    "pyzmq>=26.2.0",
    "six>=1.16.0",
    "stack-data>=0.6.3",
    "tornado>=6.4.1",
    "traitlets>=5.14.3",
    "wcwidth>=0.2.13",
    "opencv-python>=4.10.0.84",
    "scipy>=1.14.1",
    "tifffile>=2024.9.20",
    "numpy>=2.1.2",
    "ffmpeg-python>=0.2.0",
    "celluloid>=0.2.0",
    "scikit-image>=0.24.0",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
]
