[project]
name = "data-science"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "notebook>=7.2.2",
    "numpy>=2.1.3",
    "ollama>=0.4.1",
    "scipy>=1.14.1",
    "together>=1.3.5",
]
